# javadoc-mcp-server

./: .gitignore  AGENTS.md  PLAN.md  README.md  exercise_server.py  pyproject.toml  requirements.txt  test_server.py
mcp_server/: __init__.py  config.py  database.py  embedder.py  indexer.py  parser.py  server.py
