[project]
name = "javadoc-mcp-server"
version = "0.1.0"
description = "MCP server for searching Javadoc JARs with hybrid BM25 + vector search"
requires-python = ">=3.12"
dependencies = [
    "mcp[streamable-http]>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server"]

[project.scripts]
javadoc-mcp = "mcp_server.server:main"

[tool.uv]
index-url = "https://pypi.org/simple"
